--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,7 @@
 currency.create.success=Currency created successfully.
 currency.update.success=Currency updated successfully.
 currency.delete.success=Currency deleted successfully.
+
+pagination.pageNo.min=Page number must be 0 or greater.
+pagination.pageSize.min=Page size must be at least 5.
+pagination.pageSize.max=Page size must not exceed 20.
