--- a/src/main/resources/messages_np.properties
+++ b/src/main/resources/messages_np.properties
@@ -1,3 +1,7 @@
 currency.create.success=मुद्रा सफलतापूर्वक सिर्जना गरियो।
 currency.update.success=मुद्रा सफलतापूर्वक अपडेट गरियो।
 currency.delete.success=मुद्रा सफलतापूर्वक हटाइयो।
+
+pagination.pageNo.min=पृष्ठ संख्या ० वा सोभन्दा ठूलो हुनुपर्छ।
+pagination.pageSize.min=पृष्ठ आकार कम्तीमा ५ हुनुपर्छ।
+pagination.pageSize.max=पृष्ठ आकार २० भन्दा बढी हुनुहुँदैन।
